--- a/react.html
+++ b/react.html
@@ -35,7 +35,7 @@
   let rv=Math.floor((Math.random()*10)+2); 
     
 
-  /*function startTime() {
+  function startTime() {
     rv=Math.floor((Math.random()*10)+2);
     for(i=0;i<rv;i++){
         console.log(rv);
@@ -56,7 +56,7 @@
         console.log("Endtime is"+endTime);
         let temp=endTime-reactTime;
         console.log(temp);
-        document.getElementById('target').innerHTML="Time was"+time;
+        document.getElementById('target').innerHTML="Time was"+temp;
       }
     },8*1000);
   }
@@ -64,7 +64,7 @@
     setTimeout(() =>{
         document.getElementById('countdown').innerHTML=i;
     },(rv-i)*1000);
-  }*/
+  }
   </script>
 
 </body>
