--- a/delayq.html
+++ b/delayq.html
@@ -33,7 +33,8 @@
 	<p> Press the button to create an new element of type div and then add it to the container.
 		</p>
 		<button onclick="makeNewDiv()">Add value</button>
-    
+        <button onclick="get()">Get</button>
+        <button onclick="delay()">Delay</button>
     <button onclick="Promote()">Promote</button>
 </body>
 <script>
@@ -49,5 +50,44 @@
 		queueItems=document.getElementsByClassName('delayQ');
         console.log(document.getElementsByClassName('delayQ'));
 	}
+    function get(){
+        queueItems=document.getElementsByClassName('delayQ');
+        let len=queueItems.length;
+        if (len>0){
+            queueItems[0].remove();
+        }
+
+    }
+    function delay(){
+        queueItems=document.getElementsByClassName('delayQ');
+        let len=queueItems.length;
+        console.log(queueItems);
+        if(len==0 || len==1)
+        {
+
+        }
+        else if(len==2)
+        {
+            console.log("length is:"+len)
+            removedItem=queueItems[0];
+            console.log(removedItem);
+            console.log(removedItem.innerHTML);
+            queueItems[0].remove();
+            let container=document.getElementById(target)
+            container.append(removedItem,container.firstChild);
+        }
+    }
+    function Promote(){
+        let len=queueItems.length;
+        
+        let r1=Math.floor(Math.random()*len);
+        console.log(r1);
+        removedItem=queueItems[r1];
+            console.log(removedItem);
+            console.log(removedItem.innerHTML);
+            queueItems[r1].remove();
+            let container = document.getElementById('target')
+	        container.insertBefore(removedItem,container.firstChild)
+    }
 </script>
 </html>	
